--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div id="root">NOT RENDERED</div>
     <title>Document</title>
+    <link href="./src/output.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
